crates/vacro-report/tests/ui/parse_quote_spanned.stderr
error: proc macro panicked
 --> tests/ui/parse_quote_spanned.rs:3:5
  |
3 |     macros::parse_stmt_spanned!(let a = 10);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `parse_quote_spanned` failed at $DIR/tests/macros/src/lib.rs:19:24
          Tokens:
          ```
          let a = 10
          ```
          Error message: "expected `;`"
